Fixed cut off buttons on Competitions page by adding margin

--- a/NashGaming/Content/Site.css
+++ b/NashGaming/Content/Site.css
@@ -22,3 +22,7 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.maincontainer {
+    margin-top: 5%;
+}
